# AI-Compacting

./: .gitignore  HAILP_Project_Summary.docx  Kaggle.md  LICENSE  PROJECT_SUMMARY.md  README.md  __init__.py  comparison_report.html  demo.py  pyproject.toml  train.py  train_multi.py
.Rules/: Python Developer
benchmarks/: constrained_hardware.py  memory_benchmark.py  memory_profile.py  param_efficiency.py  quality_eval.py  quantize_int4.py  speed_profile.py
configs/: baseline.yaml  hailp.yaml
demo/: compare.py  generate_report.py
docs/: H(AI)LP.docx  Kaggle.md  PROJECT_SUMMARY.md
inference/: __init__.py  fast_responder.py  pipeline.py  router.py  segmenter.py
inference/tests/: test_pipeline.py  test_router.py  test_segmenter.py
models/: __init__.py  baseline_gpt.py  hailp_model.py  lifelink_rwkv.py
models/components/: __init__.py  param_sharing.py
scripts/: benchmark_dml.py  demo.py  train.py  train_multi.py  verify_dml.py
scripts/demo/: compare.py  generate_report.py
src/hailp/: __init__.py
src/hailp/benchmarks/: constrained_hardware.py  memory_profile.py  quality_eval.py  speed_profile.py
src/hailp/inference/: segmenter.py  telemetry.py  utils.py
src/hailp/models/: __init__.py  baseline_gpt.py  hailp_model.py
src/hailp/models/components/: adapter.py  low_rank.py
src/hailp/training/: __init__.py  device.py
tests/: conftest.py  test_baseline.py  test_components.py  test_hailp.py  test_int4_quant.py  test_lifelink.py
tests/inference/: __init__.py  test_pipeline.py  test_router.py  test_segmenter.py
training/: data.py  trainer.py
