[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "training", "benchmarks"]

[project]
name = "hailp"
version = "0.1.0"
description = "H(AI)LP — Architecture comparison: Baseline GPT vs H(AI)LP RWKV at 50M parameters"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "pyyaml>=6.0",
    "wandb>=0.17.0",
    "psutil>=5.9.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "datasets>=2.19.0",
    "transformers>=4.40.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
directml = [
    "torch-directml",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/hailp"]
omit = ["tests/*", "scripts/*"]
